fixed alignment

--- a/style.css
+++ b/style.css
@@ -346,7 +346,6 @@ background-size: 100% 100%;
     width: 100px;
     min-height: 90px;
     display: flex;
-    align-items: center;
     justify-content: end;
     width: 100%;
    
